src/objects/QTO_CDMaturityMetadata__mdt.object
<CustomObject>
    <fields>
        <fullName>Customer_Document_Status__c</fullName>
        <label>Customer Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exception-Association</fullName>
                    <default>true</default>
                    <label>Exception-Association</label>
                </value>
                <value>
                    <fullName>Exception-Header-Mismatch</fullName>
                </value>
                <value>
                    <fullName>Exception-Data-Enrichment</fullName>
                </value>
                <value>
                    <fullName>Exception-Enrichment(Lines)</fullName>
                </value>
                <value>
                    <fullName>Exception-Association(Lines)</fullName>
                </value>
                <value>
                    <fullName>Exception-Matching(Lines)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maturity_Value__c</fullName>
        <label>Maturity Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTO_Line_Item_Association_Comment__c</fullName>
        <label>QTO Line Item Association Comment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Done Due to Exception-Association Header</fullName>
                    <default>true</default>
                    <label>Not Done Due to Exception-Association Header</label>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Header-Mismatch</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Data-Enrichment</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Matching Header</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Enrichment(Lines)</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Association(Lines)</fullName>
                </value>
                <value>
                    <fullName>Done Successful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QTO_Line_Item_Matching_Comment__c</fullName>
        <label>QTO Line Item Matching Comment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Done Due to Exception-Association Header</fullName>
                    <default>true</default>
                    <label>Not Done Due to Exception-Association Header</label>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Header-Mismatch</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Data-Enrichment</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Matching Header</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Enrichment(Lines)</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Association(Lines)</fullName>
                </value>
                <value>
                    <fullName>Not Done Due to Exception-Matching(Lines)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>QTO CDMaturityMetadata</label>
    <pluralLabel>QTO CDMaturityMetadatas</pluralLabel>
</CustomObject>